<resources>
    <string name="app_name">WordKeeper</string>

    <!-- The navigation drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- The screen "All words" -->
    <string name="title_all_words">All words</string>
    <string name="action_search_word">Search</string>
    <string name="action_sort_word">Sort by</string>
    <string name="action_move_word">Move to</string>
    <string name="action_edit_word">Edit</string>
    <string name="action_delete_word">Delete</string>
    <string name="search_word_hint">Search words</string>
    <string name="empty_word_list">You have not added words with translations.
        To add a new word, press the \"+\".
    </string>
    <string name="success_move_word">Move successfully completed</string>
    <string name="error_move_word">Move failed</string>

    <!-- The screen "Categories" -->
    <string name="title_categories">Categories</string>
    <string name="default_category">Main</string>
    <string name="action_search_category">Search</string>
    <string name="action_add_category">Add</string>
    <string name="action_rename_category">Rename</string>
    <string name="action_delete_category">Delete</string>
    <string name="search_category_hint">Search categories</string>
    <string name="more_options_description">More options</string>
    <string name="no_results_category">No results found for \"&lt;b>%1$s&lt;/b>\"</string>
    <plurals name="number_of_words">
        <item quantity="one">%d word</item>
        <item quantity="other">%d words</item>
    </plurals>

    <!-- The screen "Category content" -->
    <string name="empty_category_content">No words in this category</string>

    <!-- The screen "Search" -->
    <string name="title_search">Search results</string>
    <string name="no_search_results">Search for \"%1$s\" no results</string>

    <!-- The screen "About -->
    <string name="title_about">About</string>
    <string name="app_icon_description">App icon</string>
    <string name="app_version">Version %1$s (build %2$d)</string>
    <string name="app_author">Alidibir Akhbulatov</string>

    <!-- The dialog "Word editor" -->
    <string name="title_new_word">New word</string>
    <string name="title_edit_word">Edit word</string>
    <string name="word_editor_name_hint">Name</string>
    <string name="word_editor_translation_hint">Translation</string>
    <string name="word_editor_category">Category</string>
    <string name="word_editor_action_add">Add</string>
    <string name="word_editor_action_edit">Edit</string>
    <string name="word_editor_action_cancel">Cancel</string>
    <string name="error_word_editor_empty_fields">The fields are not filled</string>

    <!-- The dialog "Word sort" -->
    <string-array name="sort_words">
        <item>Name</item>
        <item>Last modified</item>
    </string-array>

    <!-- The dialog "Category list" -->
    <string name="category_list_title">Move to category</string>
    <string name="category_list_action_cancel">Cancel</string>

    <!-- The dialog "Category editor" -->
    <string name="title_new_category">New category</string>
    <string name="title_rename_category">Rename category</string>
    <string name="category_editor_name_hint">Name</string>
    <string name="category_editor_action_add">Add</string>
    <string name="category_editor_action_rename">Rename</string>
    <string name="category_editor_action_cancel">Cancel</string>
    <string name="error_category_editor_empty_field">The field is not filled</string>

    <!-- The dialog "Delete category" -->
    <string name="category_delete_title">Delete category?</string>
    <string name="category_delete_message">Also removed all words
        that are in this category.
    </string>
    <string name="category_action_delete">Delete</string>
    <string name="category_action_cancel">Cancel</string>

    <!-- Rate app -->
    <string name="title_rate_app">Rate app</string>
    <string name="error_rate_app">Sorry, could not find the app</string>
</resources>
