<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_drawer_all_words"
            android:checked="true"
            android:icon="@drawable/ic_all_words"
            android:title="@string/title_all_words" />

        <item
            android:id="@+id/menu_drawer_categories"
            android:icon="@drawable/ic_categories"
            android:title="@string/title_categories" />
    </group>

    <group android:id="@+id/menu_bottom_group">
        <item
            android:id="@+id/menu_drawer_rate_app"
            android:icon="@drawable/ic_stars"
            android:title="@string/title_rate_app" />

        <item
            android:id="@+id/menu_drawer_about"
            android:icon="@drawable/ic_info"
            android:title="@string/title_about" />
    </group>

</menu>